--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "omdb",
-  "homepage": "https://SamuelMBote.github.io/MovieDatabaseOMDBProject",
   "version": "0.1.0",
+  "homepage": "https://SamuelMBote.github.io/MovieDatabaseOMDBProject",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -23,12 +23,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -52,3 +52,4 @@
     "gh-pages": "^5.0.0"
   }
 }
+
